# fastapi-application

./: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_20_2038-90c6e40bbf6f_create_test_user_table.py  2025_04_21_2249-b78fd0fca2f1_create_cinema_auditorium_seat_movie_.py  2025_04_27_2230-f3c7f3e082cd_add_end_time_in_session_table.py  2025_04_28_1726-b85575155636_delete_uniqueconstraint_from_seat_table.py  2025_04_29_1256-7913d59d1d06_add_user_id_fk_in_ticket_table.py  2025_04_29_1350-6355a0b2e035_delete_busy_column_in_seat_table_and_.py  2025_04_29_1354-207a450e2c5d_delete_price_from_ticket_table.py  2025_04_29_1640-fe67587ed7c0_create_unique_constraint_in_seat_table_.py  2025_05_05_0014-addf0067fe6a_edit_timestamp_timezone_in_start_and_.py  2025_05_07_1217-9ff10d78a308_update_tables_idintpkmixin_add_.py  2025_05_07_1430-3b91342aaba2_create_access_token_table.py  2025_05_18_2200-700767050e86_create_reservation_table.py
app/: main.py
app/api/: exceptions.py  main_router.py  prefixs.py  strategy.py
app/api/cinema/: router.py
app/api/dependencies/: access_token.py  backend.py  exception_handlers.py  fastapi_users_router.py  get_current_user.py  user.py  user_manager.py
app/api/schemas/: auditorium.py  cinema.py  confirm_reservations.py  get_user.py  movies.py  reservation.py  seat.py  session.py  ticket.py  user.py
app/core/: config.py
app/core/authentication/: transport.py  (+1 more)
app/crud/: auditorium.py  cinema.py  confirm_reservation.py  movie.py  reservation.py  seat.py  session.py  ticket.py
(+20 files in other folders)
